Added animated SVG to loader

--- a/demo-website/public/index.html
+++ b/demo-website/public/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <style type="text/css">.st0{fill:#FFDAAA;}.st1{fill:#FF6243;}.st2{fill:#FF3501;}.st3{fill:#FF9478;}.st4{fill:#FF7956;}.st5{fill:#D1E7F8;}.st6{fill:#B9D8F4;}.st7{fill:#FFFFFF;}.st8{fill:#FFA733;}.st9{fill:#EE8700;}.st10{fill:#806749;}.st11{fill:#FF0C38;}.st12{fill:#D80027;}.st13{fill:#FFC477;}</style>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
@@ -39,5 +40,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    
   </body>
 </html>
